# great-scott

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
great_scott/: __init__.py  __main__.py  migrations.py  setup.py
tests/: test_cli.py  test_core.py  test_migrations.py  test_setup.py
